Preventing sliders from spilling out

--- a/mopidy_iris/static/app.css
+++ b/mopidy_iris/static/app.css
@@ -4057,7 +4057,8 @@ input[type="submit"] {
       margin-top: -3px; }
       .slider.horizontal .track .progress {
         top: 0;
-        height: 100%; }
+        height: 100%;
+        max-width: 100%; }
   .slider.vertical {
     width: 20px;
     height: 100%; }
@@ -4068,7 +4069,8 @@ input[type="submit"] {
       left: 12px; }
       .slider.vertical .track .progress {
         bottom: 0;
-        width: 100%; }
+        width: 100%;
+        max-height: 100%; }
 
 .playback-controls {
   position: fixed;
